- 문자 컨텐츠 작업 중

--- a/assets/01-html/05-textLevel/textLevel.html
+++ b/assets/01-html/05-textLevel/textLevel.html
@@ -449,42 +449,256 @@
 
 	<article id="br_element" class="uk_course">
 		<h2>br element</h2>
+
+		<div class="indent mt_l">
+			<p>
+				&lt;br&gt; 요소는 텍스트 내의 줄바꿈(line-break)을 정의할 때 사용합니다.
+				HTML 소스 코드 내에서는 엔터(Enter)를 사용하여 줄바꿈을 실시하여도 브라우저 화면에 실제로 적용되지는 않습니다.
+				따라서 &lt;br&gt; 요소는 주소(address)나 시(poem) 등 줄바꿈이 중요한 텍스트에 유용하게 사용됩니다.
+			</p>
+			<p>
+				&lt;br&gt; 요소는 빈 태그(empty)로, 종료 태그가 존재하지 않습니다.
+				HTML4에서는 &lt;br&gt; 요소를 닫지 않지만, XHTML에서는 다음과 같이 반드시 태그를 닫아야만 합니다. (ex. &lt;br&gt; vs. &lt;br /&gt;)
+				HTML5에서는 &lt;br&gt; 요소의 종료 태그 닫아도 되고 닫지 않는것 모두 허용합니다.
+			</p>
+
+			<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.6.br_element.html">
+				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="br">
+				<li class="ie">지원</li>
+				<li class="edge">지원</li>
+				<li class="chrome">1.0</li>
+				<li class="firefox">1.0</li>
+				<li class="opera">지원</li>
+				<li class="safari">지원</li>
+			</ul>
+		</div>
 	</article>
 	<!-- br element -->
 
 
 	<article id="small_element" class="uk_course">
 		<h2>small element</h2>
+
+		<div class="indent mt_l">
+			<p>
+				&lt;small&gt; 요소는 글자 크기가 작은 텍스트를 정의할 때 사용합니다.<br>
+				HTML5에서 &lt;small&gt; 요소는 해당 텍스트의 스타일 표현과는 별도로 저작권(copyright)이나 법률적인 내용의 부연 설명이나 작은 페이지를 나타낼 때 사용되도록 변경되었습니다.
+			</p>
+
+			<div class="line_code mt_m">
+				<p class="t_blue"><b>CSS 기본값 : small {font-size: smaller;}</b></p>
+			</div>
+
+			<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.7.small_element.html">
+				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="small">
+				<li class="ie">지원</li>
+				<li class="edge">지원</li>
+				<li class="chrome">지원</li>
+				<li class="firefox">1.0</li>
+				<li class="opera">지원</li>
+				<li class="safari">지원</li>
+			</ul>
+		</div>
 	</article>
 	<!-- small element -->
 
 
 	<article id="s_element" class="uk_course">
 		<h2>s element</h2>
+
+		<div class="indent mt_l">
+			<p>
+				&lt;s&gt; 요소는 텍스트 한가운데 라인(line)을 추가하여 더 이상 정확하지 않거나 관련이 없는 텍스트를 표현할 때 사용합니다.
+				&lt;s&gt; 요소를 사용하여 문서에서 대체되거나 삭제된 텍스트를 표현해서는 안 되며, 해당 텍스트는 &lt;del&gt; 요소를 사용해서 표현해야만 합니다.
+				텍스트 한가운데 라인을 추가하는 용도로 사용되던 &lt;s&gt; 요소는 HTML 4.01에서 더 이상 지원되지 않도록 변경되었습니다.
+				하지만 HTML5에서 &lt;s&gt; 요소는 더 이상 정확하지 않거나 관련이 없는 텍스트를 표현하도록 의미를 재정의하여 다시 추가되었습니다.
+			</p>
+
+			<div class="line_code mt_m">
+				<p class="t_blue"><b>CSS 기본값 : s {text-decoration: line-through;}</b></p>
+			</div>
+
+			<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.8.s_element.html">
+				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="small">
+				<li class="ie">지원</li>
+				<li class="edge">지원</li>
+				<li class="chrome">지원</li>
+				<li class="firefox">1.0</li>
+				<li class="opera">지원</li>
+				<li class="safari">지원</li>
+			</ul>
+		</div>
 	</article>
 	<!-- s element -->
 
 
 	<article id="cite_element" class="uk_course">
 		<h2>cite element</h2>
+
+		<div class="indent mt_l">
+			<p>
+				&lt;cite&gt; 요소는 책이나 음악, 영화, 예술 작품 등과 같은 창작물의 제목을 정의할 때 사용합니다.<br>
+				HTML 4.01에서 &lt;cite&gt; 요소는 인용구(citation)를 명시했었지만, HTML5에서는 창작물이나 저작물 등의 제목을 명시할 때 사용됩니다.
+			</p>
+
+			<div class="ol_lst indent mt_s">
+				<ol>
+					<li>
+						창작물은 책, 논문, 에세이,시, 악보, 노래, 스크립트, 영화, TV 쇼, 게임, 조각품, 그림, 연극 제작, 연극, 오페라, 뮤지컬, 전시, 법적 사례 보고서, 컴퓨터 프로그램, 웹 사이트, 웹 페이지, 블로그 게시물 또는 의견, 포럼 게시물이나 댓글, 트윗, 서면 또는 구두 진술, 등을 포함합니다.
+					</li>
+					<li>
+						온라인 리소스에 대한 참조를 위해 cite 속성을&lt;blockquote&gt; 또는 &lt;q&gt; 요소에 사용하세요.
+					</li>
+				</ol>
+			</div>
+
+			<div class="line_code mt_m">
+				<p class="t_blue"><b>CSS 기본값 : cite {font-style: italic;}</b></p>
+			</div>
+
+			<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.9.cite_element.html">
+				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="br">
+				<li class="ie">지원</li>
+				<li class="edge">지원</li>
+				<li class="chrome">지원</li>
+				<li class="firefox">지원</li>
+				<li class="opera">지원</li>
+				<li class="safari">지원</li>
+			</ul>
+		</div>
 	</article>
 	<!-- cite element -->
 
 
 	<article id="sub_element" class="uk_course">
 		<h2>sub element</h2>
+
+		<div class="indent mt_l">
+			<p>
+				&lt;sub&gt; 요소는 아랫첨자(subscript) 텍스트를 표현할 때 사용합니다.<br>
+				&lt;sub&gt; 요소 내부의 텍스트는 일반 텍스트 라인보다 아래쪽에 절반 크기의 작은 문자로 표현되며,<br>
+				이러한 아랫첨자는 수학 공식(ex) nPr = n!/(n-r)!)이나 분자식, 화학 반응식(ex) 2H2 + O2 → 2H2O) 등을 표현할 수 있습니다.<br>
+				윗첨자(superscript) 텍스트를 표현할 때는 &lt;sup&gt; 요소를 사용합니다.
+			</p>
+
+			<div class="line_code mt_m">
+				<p class="t_blue"><b>CSS 기본값 : sub { vertical-align: sub; font-size: smaller;}</b></p>
+			</div>
+
+			<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.10.sub_element.html">
+				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="br">
+				<li class="ie">지원</li>
+				<li class="edge">지원</li>
+				<li class="chrome">지원</li>
+				<li class="firefox">1.0</li>
+				<li class="opera">지원</li>
+				<li class="safari">지원</li>
+			</ul>
+		</div>
 	</article>
 	<!-- sub element -->
 
 
 	<article id="sup_element" class="uk_course">
 		<h2>sup element</h2>
+
+		<div class="indent mt_l">
+			<p>
+				&lt;sup&gt; 요소는 윗첨자(superscript) 텍스트를 표현할 때 사용합니다.<br>
+				&lt;sup&gt; 요소 내부의 텍스트는 일반 텍스트 라인보다 윗쪽에 절반 크기의 작은 문자로 표현되며,<br>
+				이러한 윗첨자는 수학 공식(ex) (a+b)2 = a2 + 2ab + b2)이나 각주(ex) WWW[1]) 등을 표현할 수 있습니다.<br>
+				아랫첨자(subscript) 텍스트를 표현할 때는 &lt;sub&gt; 요소를 사용합니다.
+			</p>
+
+			<div class="line_code mt_m">
+				<p class="t_blue"><b>CSS 기본값 : sup {vertical-align: super; font-size: smaller;}</b></p>
+			</div>
+
+			<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.11.sup_element.html">
+				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="br">
+				<li class="ie">지원</li>
+				<li class="edge">지원</li>
+				<li class="chrome">지원</li>
+				<li class="firefox">1.0</li>
+				<li class="opera">지원</li>
+				<li class="safari">지원</li>
+			</ul>
+		</div>
 	</article>
 	<!-- sup element -->
 
 
 	<article id="mark_element" class="uk_course">
 		<h2>mark element</h2>
+
+		<div class="indent mt_l">
+			<p>
+				&lt;mark&gt; 요소는 <mark>형광펜으로 칠한 것처럼 하이라이트된(highlighted) 텍스트</mark>를 정의할 때 사용합니다.<br>
+				예를 들면, 검색 결과에서 검색에 대한 단어의 모든 인스턴스를 표시하기 위해 사용될수 있습니다.<br>
+				&lt;mark&gt; 요소는 HTML5에서 새롭게 추가된 요소입니다.
+			</p>
+
+			<div class="ol_lst indent mt_s">
+				<ol>
+					<li>
+						인용 ( &lt;q&gt;) 또는 블록 인용 ( &lt;blockquote&gt;)에 사용되는 경우 일반적으로 특별한 관심이 있지만 원본 소스 자료에 표시되지 않은 텍스트 또는 원저자가 생각하지 않았더라도 특별한 조사가 필요한 자료를 나타냅니다.<br>
+						특히 중요합니다. 책에서 형광펜을 사용하여 관심있는 구절을 표시하는 것과 같이 생각하십시오.
+					</li>
+					<li>
+						그렇지 않으면, &lt;mark&gt; 사용자의 현재 활동과 관련이있을 수있는 문서 내용의 일부를 나타냅니다. 예를 들어 검색 작업과 일치하는 단어를 나타내는 데 사용할 수 있습니다.
+					</li>
+				</ol>
+			</div>
+
+			<div class="line_code mt_m">
+				<p class="t_blue"><b>CSS 기본값 : mark {background-color: yellow; color: black;}</b></p>
+			</div>
+
+			<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.12.mark_element.html">
+				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="br">
+				<li class="ie">9+</li>
+				<li class="edge">지원</li>
+				<li class="chrome">지원</li>
+				<li class="firefox">4.0</li>
+				<li class="opera">11.0</li>
+				<li class="safari">지원</li>
+			</ul>
+		</div>
 	</article>
 	<!-- mark element -->
 
