- 개별 컨텐츠로 변환 작업 중

--- a/assets/01-html/05-textLevel/08-s_element.html
+++ b/assets/01-html/05-textLevel/08-s_element.html
@@ -2,31 +2,29 @@
 
 	<h1></h1><!-- s element -->
 
-	<div class="mt_l">
-		<p>
-			&lt;s&gt; 요소는 텍스트 한가운데 라인(line)을 추가하여 더 이상 정확하지 않거나 관련이 없는 텍스트를 표현할 때 사용합니다.
-			&lt;s&gt; 요소를 사용하여 문서에서 대체되거나 삭제된 텍스트를 표현해서는 안 되며, 해당 텍스트는 &lt;del&gt; 요소를 사용해서 표현해야만 합니다.
-			텍스트 한가운데 라인을 추가하는 용도로 사용되던 &lt;s&gt; 요소는 HTML 4.01에서 더 이상 지원되지 않도록 변경되었습니다.
-			하지만 HTML5에서 &lt;s&gt; 요소는 더 이상 정확하지 않거나 관련이 없는 텍스트를 표현하도록 의미를 재정의하여 다시 추가되었습니다.
-		</p>
+	<p class="mt_l">
+		&lt;s&gt; 요소는 텍스트 한가운데 라인(line)을 추가하여 더 이상 정확하지 않거나 관련이 없는 텍스트를 표현할 때 사용합니다.
+		&lt;s&gt; 요소를 사용하여 문서에서 대체되거나 삭제된 텍스트를 표현해서는 안 되며, 해당 텍스트는 &lt;del&gt; 요소를 사용해서 표현해야만 합니다.
+		텍스트 한가운데 라인을 추가하는 용도로 사용되던 &lt;s&gt; 요소는 HTML 4.01에서 더 이상 지원되지 않도록 변경되었습니다.
+		하지만 HTML5에서 &lt;s&gt; 요소는 더 이상 정확하지 않거나 관련이 없는 텍스트를 표현하도록 의미를 재정의하여 다시 추가되었습니다.
+	</p>
 
-		<div class="line_code mt_m">
-			<p class="t_blue"><b>CSS 기본값 : s {text-decoration: line-through;}</b></p>
-		</div>
-
-		<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.8.s_element.html">
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
-		</div>
-
-		<ul class="browser_support mt_l" data-tit="small">
-			<li class="ie">지원</li>
-			<li class="edge">지원</li>
-			<li class="chrome">지원</li>
-			<li class="firefox">1.0</li>
-			<li class="opera">지원</li>
-			<li class="safari">지원</li>
-		</ul>
+	<div class="line_code mt_m">
+		<p class="t_blue"><b>CSS 기본값 : s {text-decoration: line-through;}</b></p>
 	</div>
+
+	<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.8.s_element.html">
+		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div class="code_wrap"><textarea></textarea></div>
+		</div>
+	</div>
+
+	<ul class="browser_support mt_l" data-tit="small">
+		<li class="ie">지원</li>
+		<li class="edge">지원</li>
+		<li class="chrome">지원</li>
+		<li class="firefox">1.0</li>
+		<li class="opera">지원</li>
+		<li class="safari">지원</li>
+	</ul>
 
