--- a/assets/01-html/02-blockInline/note.html
+++ b/assets/01-html/02-blockInline/note.html
@@ -1,9 +1,11 @@
 
 <div class="uk_note">
-	<h2 class="sound_only">000</h2>
-	<p>HTML에는 두가지 종류의 요소(Element) 가 있습니다. 블록 레벨 요소(Block level element) 와 인라인 요소(Inline element) 입니다.</p>
-	<p>HTML의 모든 요소는 해당 요소가 웹 브라우저에 어떻게 보이는가를 결정짓는 display 속성을 가집니다.</p>
-	<p>대부분의 HTML 요소는 이러한 display 속성값으로 대표적으로 block, inline 두 가지 값 중 하나를 가지게 됩니다.</p>
-	<p>단, table의 기본 속성값은 다르게 이루어집니다.</p>
-	<p>HTML5에서는 콘텐츠모델별 분류하며 HTML5의 각 요소들은 특성에 따라 분류한 요소가 어떤 분류에도 속하지 않을 수도 있고 여러 분류에 속해있을 수도 있습니다.</p>
+	<h2 class="sound_only">요약 설명</h2>
+	<ul>
+		<li>HTML에는 두가지 종류의 요소(Element) 가 있습니다. 블록 레벨 요소(Block level element) 와 인라인 요소(Inline element) 입니다.</li>
+		<li>HTML의 모든 요소는 해당 요소가 웹 브라우저에 어떻게 보이는가를 결정짓는 display 속성을 가집니다.</li>
+		<li>대부분의 HTML 요소는 이러한 display 속성값으로 대표적으로 block, inline 두 가지 값 중 하나를 가지게 됩니다.</li>
+		<li>단, table의 기본 속성값은 다르게 이루어집니다.</li>
+		<li>HTML5에서는 콘텐츠모델별 분류하며 HTML5의 각 요소들은 특성에 따라 분류한 요소가 어떤 분류에도 속하지 않을 수도 있고 여러 분류에 속해있을 수도 있습니다.</li>
+	</ul>
 </div>
