--- a/assets/01-html/05-textLevel/07-small_element.html
+++ b/assets/01-html/05-textLevel/07-small_element.html
@@ -2,28 +2,26 @@
 
 	<h1></h1><!-- small element -->
 
-	<div class="mt_l">
-		<p>
-			&lt;small&gt; 요소는 글자 크기가 작은 텍스트를 정의할 때 사용합니다.<br>
-			HTML5에서 &lt;small&gt; 요소는 해당 텍스트의 스타일 표현과는 별도로 저작권(copyright)이나 법률적인 내용의 부연 설명이나 작은 페이지를 나타낼 때 사용되도록 변경되었습니다.
-		</p>
+	<p class="mt_l">
+		&lt;small&gt; 요소는 글자 크기가 작은 텍스트를 정의할 때 사용합니다.<br>
+		HTML5에서 &lt;small&gt; 요소는 해당 텍스트의 스타일 표현과는 별도로 저작권(copyright)이나 법률적인 내용의 부연 설명이나 작은 페이지를 나타낼 때 사용되도록 변경되었습니다.
+	</p>
 
-		<div class="line_code mt_m">
-			<p class="t_blue"><b>CSS 기본값 : small {font-size: smaller;}</b></p>
-		</div>
-
-		<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.7.small_element.html">
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
-		</div>
-
-		<ul class="browser_support mt_l" data-tit="small">
-			<li class="ie">지원</li>
-			<li class="edge">지원</li>
-			<li class="chrome">지원</li>
-			<li class="firefox">1.0</li>
-			<li class="opera">지원</li>
-			<li class="safari">지원</li>
-		</ul>
+	<div class="line_code mt_m">
+		<p class="t_blue"><b>CSS 기본값 : small {font-size: smaller;}</b></p>
 	</div>
+
+	<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.7.small_element.html">
+		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div class="code_wrap"><textarea></textarea></div>
+		</div>
+	</div>
+
+	<ul class="browser_support mt_l" data-tit="small">
+		<li class="ie">지원</li>
+		<li class="edge">지원</li>
+		<li class="chrome">지원</li>
+		<li class="firefox">1.0</li>
+		<li class="opera">지원</li>
+		<li class="safari">지원</li>
+	</ul>
