--- a/assets/01-html/05-textLevel/09-cite_element.html
+++ b/assets/01-html/05-textLevel/09-cite_element.html
@@ -2,40 +2,38 @@
 
 	<h1></h1><!-- cite element -->
 
-	<div class="mt_l">
-		<p>
-			&lt;cite&gt; 요소는 책이나 음악, 영화, 예술 작품 등과 같은 창작물의 제목을 정의할 때 사용합니다.<br>
-			HTML 4.01에서 &lt;cite&gt; 요소는 인용구(citation)를 명시했었지만, HTML5에서는 창작물이나 저작물 등의 제목을 명시할 때 사용됩니다.
-		</p>
+	<p class="mt_l">
+		&lt;cite&gt; 요소는 책이나 음악, 영화, 예술 작품 등과 같은 창작물의 제목을 정의할 때 사용합니다.<br>
+		HTML 4.01에서 &lt;cite&gt; 요소는 인용구(citation)를 명시했었지만, HTML5에서는 창작물이나 저작물 등의 제목을 명시할 때 사용됩니다.
+	</p>
 
-		<div class="ol_lst indent mt_s">
-			<ol>
-				<li>
-					창작물은 책, 논문, 에세이,시, 악보, 노래, 스크립트, 영화, TV 쇼, 게임, 조각품, 그림, 연극 제작, 연극, 오페라, 뮤지컬, 전시, 법적 사례 보고서, 컴퓨터 프로그램, 웹 사이트, 웹 페이지, 블로그 게시물 또는 의견, 포럼 게시물이나 댓글, 트윗, 서면 또는 구두 진술, 등을 포함합니다.
-				</li>
-				<li>
-					온라인 리소스에 대한 참조를 위해 cite 속성을&lt;blockquote&gt; 또는 &lt;q&gt; 요소에 사용하세요.
-				</li>
-			</ol>
-		</div>
-
-		<div class="line_code mt_m">
-			<p class="t_blue"><b>CSS 기본값 : cite {font-style: italic;}</b></p>
-		</div>
-
-		<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.9.cite_element.html">
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
-		</div>
-
-		<ul class="browser_support mt_l" data-tit="br">
-			<li class="ie">지원</li>
-			<li class="edge">지원</li>
-			<li class="chrome">지원</li>
-			<li class="firefox">지원</li>
-			<li class="opera">지원</li>
-			<li class="safari">지원</li>
-		</ul>
+	<div class="ol_lst indent mt_s">
+		<ol>
+			<li>
+				창작물은 책, 논문, 에세이,시, 악보, 노래, 스크립트, 영화, TV 쇼, 게임, 조각품, 그림, 연극 제작, 연극, 오페라, 뮤지컬, 전시, 법적 사례 보고서, 컴퓨터 프로그램, 웹 사이트, 웹 페이지, 블로그 게시물 또는 의견, 포럼 게시물이나 댓글, 트윗, 서면 또는 구두 진술, 등을 포함합니다.
+			</li>
+			<li>
+				온라인 리소스에 대한 참조를 위해 cite 속성을&lt;blockquote&gt; 또는 &lt;q&gt; 요소에 사용하세요.
+			</li>
+		</ol>
 	</div>
+
+	<div class="line_code mt_m">
+		<p class="t_blue"><b>CSS 기본값 : cite {font-style: italic;}</b></p>
+	</div>
+
+	<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.9.cite_element.html">
+		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div class="code_wrap"><textarea></textarea></div>
+		</div>
+	</div>
+
+	<ul class="browser_support mt_l" data-tit="br">
+		<li class="ie">지원</li>
+		<li class="edge">지원</li>
+		<li class="chrome">지원</li>
+		<li class="firefox">지원</li>
+		<li class="opera">지원</li>
+		<li class="safari">지원</li>
+	</ul>
 
