--- a/assets/01-html/05-textLevel/10-sub_element.html
+++ b/assets/01-html/05-textLevel/10-sub_element.html
@@ -2,30 +2,28 @@
 
 	<h1></h1><!-- sub element -->
 
-	<div class="mt_l">
-		<p>
-			&lt;sub&gt; 요소는 아랫첨자(subscript) 텍스트를 표현할 때 사용합니다.<br>
-			&lt;sub&gt; 요소 내부의 텍스트는 일반 텍스트 라인보다 아래쪽에 절반 크기의 작은 문자로 표현되며,<br>
-			이러한 아랫첨자는 수학 공식(ex) nPr = n!/(n-r)!)이나 분자식, 화학 반응식(ex) 2H2 + O2 → 2H2O) 등을 표현할 수 있습니다.<br>
-			윗첨자(superscript) 텍스트를 표현할 때는 &lt;sup&gt; 요소를 사용합니다.
-		</p>
+	<p class="mt_l">
+		&lt;sub&gt; 요소는 아랫첨자(subscript) 텍스트를 표현할 때 사용합니다.<br>
+		&lt;sub&gt; 요소 내부의 텍스트는 일반 텍스트 라인보다 아래쪽에 절반 크기의 작은 문자로 표현되며,<br>
+		이러한 아랫첨자는 수학 공식(ex) nPr = n!/(n-r)!)이나 분자식, 화학 반응식(ex) 2H2 + O2 → 2H2O) 등을 표현할 수 있습니다.<br>
+		윗첨자(superscript) 텍스트를 표현할 때는 &lt;sup&gt; 요소를 사용합니다.
+	</p>
 
-		<div class="line_code mt_m">
-			<p class="t_blue"><b>CSS 기본값 : sub { vertical-align: sub; font-size: smaller;}</b></p>
-		</div>
-
-		<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.10.sub_element.html">
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
-		</div>
-
-		<ul class="browser_support mt_l" data-tit="br">
-			<li class="ie">지원</li>
-			<li class="edge">지원</li>
-			<li class="chrome">지원</li>
-			<li class="firefox">1.0</li>
-			<li class="opera">지원</li>
-			<li class="safari">지원</li>
-		</ul>
+	<div class="line_code mt_m">
+		<p class="t_blue"><b>CSS 기본값 : sub { vertical-align: sub; font-size: smaller;}</b></p>
 	</div>
+
+	<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.10.sub_element.html">
+		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div class="code_wrap"><textarea></textarea></div>
+		</div>
+	</div>
+
+	<ul class="browser_support mt_l" data-tit="br">
+		<li class="ie">지원</li>
+		<li class="edge">지원</li>
+		<li class="chrome">지원</li>
+		<li class="firefox">1.0</li>
+		<li class="opera">지원</li>
+		<li class="safari">지원</li>
+	</ul>
