- 개별 컨텐츠로 변환 작업 중

--- a/assets/01-html/02-blockInline/note.html
+++ b/assets/01-html/02-blockInline/note.html
@@ -1,5 +1,5 @@
 
-<div class="uk_note">
+<blockquote class="uk_note" role="note">
 	<h2 class="sound_only">요약 설명</h2>
 	<ul>
 		<li>HTML에는 두가지 종류의 요소(Element) 가 있습니다. 블록 레벨 요소(Block level element) 와 인라인 요소(Inline element) 입니다.</li>
@@ -8,4 +8,4 @@
 		<li>단, table의 기본 속성값은 다르게 이루어집니다.</li>
 		<li>HTML5에서는 콘텐츠모델별 분류하며 HTML5의 각 요소들은 특성에 따라 분류한 요소가 어떤 분류에도 속하지 않을 수도 있고 여러 분류에 속해있을 수도 있습니다.</li>
 	</ul>
-</div>
+</blockquote>
