--- a/assets/01-html/03-sections/note.html
+++ b/assets/01-html/03-sections/note.html
@@ -1,5 +1,5 @@
 
-<div class="uk_note">
+<div class="uk_note" role="note">
 	<h2 class="sound_only">요약 설명</h2>
 	<ul>
 		<li>콘텐츠 구획화 요소는 문서 콘텐츠를 논리적인 구조로 체계화 시킬 수 있도록 해줍니다.</li>
