--- a/ukncs/tutorials/html/03-sections/3.1.header_element2.html
+++ b/ukncs/tutorials/html/03-sections/3.1.header_element2.html
@@ -15,5 +15,5 @@
 		<dt>Authors:</dt>
 		<dd>See <a href="#authors">Author List</a></dd>
 	</dl>
-	<p class="copyright"><a href="https://www.w3.org/Consortium/Legal/ipr-notic ...
+	<p class="copyright"><a href="https://www.w3.org/Consortium/Legal/ipr-notic ..." /></p>
 </header>
