--- a/assets/01-html/05-textLevel/reference.html
+++ b/assets/01-html/05-textLevel/reference.html
@@ -2,7 +2,7 @@
 	<footer class="reference_box">
 		<h2 class="tit">참조</h2>
 		<ul class="link_lst">
-			<li class="reference"><a href="https://www.w3.org/TR/html52/grouping-content.html#grouping-content" target="_blank" class="fas">W3C 문서</a></li>
+			<li class="reference"><a href="https://www.w3.org/TR/html52/textlevel-semantics.html#textlevel-semantics" target="_blank" class="fas">W3C 문서</a></li>
 			<li class="reference"><a href="https://developer.mozilla.org/ko/docs/Web/HTML/Element" target="_blank" class="fas">MDN 문서</a></li>
 		</ul>
 	</footer>
