--- a/ukncs/tutorials/css/step03/4.4.flexible/4.4.1.flexible-align-items.html
+++ b/ukncs/tutorials/css/step03/4.4.flexible/4.4.1.flexible-align-items.html
@@ -9,103 +9,142 @@
 		<style>
 			*{margin:0;padding:0;box-sizing:border-box;}
 
-			.box {
+			body {
+				background-color: #F5F5F5;
+				color: #555;
+				font-size: 1.1em;
+				font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+			}
+
+			hr {
+				margin: 50px 0;
+			}
+			.demo{
+				position:relative;
+				max-width:900px;
+				margin:0 auto;
+				border:4px solid #ddd;
+			}
+
+			.container {
+				position: relative;
+				max-width: 840px;
+				height: 400px;
+				margin: 150px auto;
+				padding: 20px;
+				background-color: #594255;
+
+				-webkit-display: -webkit-box;
+				-webkit-display: -webkit-flex;
+				display: -webkit-box;
+				display: -ms-flexbox;
 				display: flex;
-    		flex-wrap: wrap;
+			}
 
+			.line {
+				visibility: hidden;
+				position: absolute;
+				top: 120px;
+				left: 0;
+				width: 100%;
+				height: 1px;
+				border-bottom: 2px solid deepPink;
+			}
+
+			.item {
+				width: 100px;
+				margin: 1%;
+				background-color: #fff;
+				color: #594255;
+				font-weight: bold;
+				font-family: sans-serif;
+				font-size: 4em;
+				line-height: 100px;
+				text-align: center;
+			}
+
+			.big {
+				width: 150px;
+				font-size: 5em;
+			}
+
+			.small {
+				font-size: 2em;
+			}
+
+			.controls {
+				position: absolute;
+				top: 0;
+				right: 0;
 				width: 300px;
-				height:150px;
-				margin:20px;
-				border: 2px dotted rgb(96, 139, 168);
-			}
-			.box > * {
-				width: 50px;
-				border: 1px solid #8c8c8c;
-				text-align:center;
-			}
-
-			.stretch{
-				align-items: stretch;
-			}
-			.flex-start{
-				align-items: flex-start;
-			}
-			.flex-end{
-				align-items: flex-end;
-			}
-			.center{
-				align-items: center;
-			}
-			.baseline{
-				align-items: baseline;
+				padding: 20px;
+				border: 1px solid #ddd;
+				background-color: white;
+				line-height: 150%;
 			}
 		</style>
 	</head>
 	<body>
-		<h2>align-items: stretch;</h2>
-		<div class="box stretch">
-			<div>1</div>
-			<div>2</div>
-			<div>A</div>
-			<div>a</div>
-			<div>가</div>
-			<div>라</div>
-			<div>Y</div>
-			<div>y</div>
-			<div>g</div>
-			<div>G</div>
-		</div>
-		<h2>align-items: flex-start;</h2>
-		<div class="box flex-start">
-			<div>1</div>
-			<div>2</div>
-			<div>A</div>
-			<div>a</div>
-			<div>가</div>
-			<div>라</div>
-			<div>Y</div>
-			<div>y</div>
-			<div>g</div>
-			<div>G</div>
-		</div>
-		<h2>align-items: flex-end;</h2>
-		<div class="box flex-end">
-			<div>1</div>
-			<div>2</div>
-			<div>A</div>
-			<div>a</div>
-			<div>가</div>
-			<div>라</div>
-			<div>Y</div>
-			<div>y</div>
-			<div>g</div>
-			<div>G</div>
-		</div>
-		<h2>align-items: center;</h2>
-		<div class="box center">
-			<div>1</div>
-			<div>2</div>
-			<div>A</div>
-			<div>a</div>
-			<div>가</div>
-			<div>라</div>
-			<div>Y</div>
-			<div>y</div>
-			<div>g</div>
-			<div>G</div>
-		</div>
-		<h2>align-items: baseline;</h2>
-		<div class="box baseline">
-			<div>1</div>
-			<div>2</div>
-			<div>A</div>
-			<div>a</div>
-			<div>가</div>
-			<div>라</div>
-			<div>Y</div>
-			<div>y</div>
-			<div>g</div>
-			<div>G</div>
+		<div class="demo">
+			<div class="container" id="container">
+				<div class="item big">1</div>
+				<div class="item">2</div>
+				<div class="item small">3</div>
+				<div class="item big">4</div>
+				<div class="item">5</div>
+				<div class="line" id="line"></div>
+			</div>
+			<div class="controls">
+				<input type="radio" name="align-items" id="flex-start" 
+							onclick="
+												var container=document.getElementById('container'); 
+												container.style.WebkitAlignItems = 'flex-start';
+												container.style.alignItems = 'flex-start'; 
+												var line = document.getElementById('line'); 
+												line.style.visibility = 'hidden';  
+												">
+				<label for="flex-start">align-items: flex-start;</label>
+				<br>
+				<input type="radio" name="align-items" id="flex-end" 
+							onclick="
+												var container=document.getElementById('container'); 
+												container.style.WebkitAlignItems = 'flex-end'; 
+												container.style.alignItems = 'flex-end'; 
+												var line = document.getElementById('line'); 
+												line.style.visibility = 'hidden';  
+												">
+				<label for="flex-end">align-items: flex-end;</label>
+				<br>
+				<input type="radio" name="align-items" id="center" 
+							onclick="
+												var container=document.getElementById('container'); 
+												container.style.WebkitAlignItems = 'center'; 
+												container.style.alignItems = 'center'; 
+												var line = document.getElementById('line'); 
+												line.style.visibility = 'hidden';  
+												">
+				<label for="center">align-items: center;</label>
+				<br>
+				<input type="radio" name="align-items" id="baseline" 
+							onclick="
+												var container=document.getElementById('container'); 
+												container.style.WebkitAlignItems = 'baseline'; 
+												container.style.alignItems = 'baseline'; 
+												var line = document.getElementById('line'); 
+												line.style.visibility = 'visible'; 
+												">
+				<label for="baseline">align-items: baseline;</label>
+				<br>
+				<input type="radio" name="align-items" id="stretch" 
+							onclick="
+												var container=document.getElementById('container');
+												container.style.WebkitAlignItems = 'stretch';  
+												container.style.alignItems = 'stretch'; 
+												var line = document.getElementById('line'); 
+												line.style.visibility = 'hidden'; 
+												" checked>
+				<label for="stretch">align-items: stretch;</label>
+			</div>
 		</div>
 	</body>
 </html>
