--- a/ukncs/uxkm-css.html
+++ b/ukncs/uxkm-css.html
@@ -16271,6 +16271,10 @@ animation: 3s slidein;
 	flex-flow: &lt;flex-direction&gt; || &lt;flex-wrap&gt;;
 }
 </code></pre>
+								<figure>
+									<figcaption>Image showing the difference in layout directions between a horizontal language (English) and a vertical language (Japanese).</figcaption>
+									<img src="images/css/flex-flow-example.png" alt="">
+								</figure>
 <pre><code>
 &lt;!DOCTYPE html&gt;
 &lt;html lang="ko"&gt;
@@ -16287,7 +16291,7 @@ animation: 3s slidein;
 				max-width:600px;
 				margin: 0 auto;
 			}
-			.flex-container {
+			.flexbox .flex-container {
 				margin: 0;
 				padding: 0;
 				
@@ -16300,28 +16304,28 @@ animation: 3s slidein;
 				display: flex;
 			}
 
-			h1 {
+			.flexbox h1 {
 				padding-left: .5em; 
 			}
 
-			.shorthand { 
+			.flexbox .shorthand { 
 				-webkit-flex-wrap: wrap;
 				flex-wrap: wrap;
 				-webkit-flex-direction: row;
 				flex-direction: row;
 			}
 
-			.longhand { 
+			.flexbox .longhand { 
 				-webkit-flex-flow: wrap row;
 				flex-flow: wrap row;
 				
 			}
 
-			.longhand li {
+			.flexbox .longhand li {
 				background: deepskyblue;
 			}
 
-			.flex-item {
+			.flexbox .flex-item {
 				background: tomato;
 				padding: 5px;
 				width: 100px;
@@ -16333,6 +16337,86 @@ animation: 3s slidein;
 				font-size: 2em;
 				line-height: 100px;
 				text-align: center;
+			}
+
+
+			.demo-flex-flow{
+				max-width:900px;
+				margin:0 auto;
+				border:2px solid ddd;
+			}
+
+			hr {
+				margin: 50px 0;
+			}
+
+			.demo-flex-flow p {
+				font-size: 1.1em;
+				font-weight: bold;
+			}
+
+			.demo-flex-flow .container {
+				margin: 20px auto;
+				width: 100%;
+				padding: 20px;
+				-webkit-display: -webkit-box;
+				-webkit-display: -webkit-flex;
+				display: -webkit-box;
+				display: -ms-flexbox;
+				display: flex;
+				background-color: #594255;
+			}
+
+			.demo-flex-flow .item {
+				width: 100px;
+				height: 100px;
+				margin: 2px;
+				background-color: #fff;
+				color: #594255;
+				font-weight: bold;
+				font-family: sans-serif;
+				font-size: 5em;
+				line-height: 100px;
+				text-align: center;
+			}
+
+			.demo-flex-flow .container-1 {
+				-webkit-flex-flow: row nowrap;
+				-ms-flex-flow: row nowrap;
+				flex-flow: row nowrap;
+			}
+
+			.demo-flex-flow .container-2 {
+				-webkit-flex-flow: row wrap;
+				-ms-flex-flow: row wrap;
+				flex-flow: row wrap;
+			}
+
+			.demo-flex-flow .container-3 {
+				-webkit-flex-flow: row wrap-reverse;
+				-ms-flex-flow: row wrap-reverse;
+				flex-flow: row wrap-reverse;
+			}
+
+			.demo-flex-flow .container-4 {
+				height: 800px;
+				-webkit-flex-flow: column nowrap;
+				-ms-flex-flow: column nowrap;
+				flex-flow: column nowrap;
+			}
+
+			.demo-flex-flow .container-5 {
+				height: 800px;
+				-webkit-flex-flow: column wrap;
+				-ms-flex-flow: column wrap;
+				flex-flow: column wrap;
+			}
+
+			.demo-flex-flow .container-6 {
+				height: 800px;
+				-webkit-flex-flow: column wrap-reverse;
+				-ms-flex-flow: column wrap-reverse;
+				flex-flow: column wrap-reverse;
 			}
 		&lt;/style&gt;
 	&lt;/head&gt;
@@ -16354,6 +16438,94 @@ animation: 3s slidein;
 				&lt;li class="flex-item"&gt;3&lt;/li&gt;
 				&lt;li class="flex-item"&gt;4&lt;/li&gt;
 			&lt;/ul&gt;
+		&lt;/div&gt;
+
+		&lt;hr&gt;
+
+		&lt;div class="demo-flex-flow"&gt;
+			&lt;p&gt;
+				&lt;code&gt;flex-flow: row nowrap; /* the default value */&lt;/code&gt;
+			&lt;/p&gt;
+			&lt;div class="container container-1"&gt;
+				&lt;div class="item"&gt;1&lt;/div&gt;
+				&lt;div class="item"&gt;2&lt;/div&gt;
+				&lt;div class="item"&gt;3&lt;/div&gt;
+				&lt;div class="item"&gt;4&lt;/div&gt;
+				&lt;div class="item"&gt;5&lt;/div&gt;
+				&lt;div class="item"&gt;6&lt;/div&gt;
+				&lt;div class="item"&gt;7&lt;/div&gt;
+				&lt;div class="item"&gt;8&lt;/div&gt;
+			&lt;/div&gt;
+			&lt;hr&gt;
+			&lt;p&gt;
+				&lt;code&gt;flex-flow: row wrap; /* flex items wrap. flex lines stack in the direction of the cross axis (which is top-to-bottom in a LTR language) */&lt;/code&gt;
+			&lt;/p&gt;
+			&lt;div class="container container-2"&gt;
+				&lt;div class="item"&gt;1&lt;/div&gt;
+				&lt;div class="item"&gt;2&lt;/div&gt;
+				&lt;div class="item"&gt;3&lt;/div&gt;
+				&lt;div class="item"&gt;4&lt;/div&gt;
+				&lt;div class="item"&gt;5&lt;/div&gt;
+				&lt;div class="item"&gt;6&lt;/div&gt;
+				&lt;div class="item"&gt;7&lt;/div&gt;
+				&lt;div class="item"&gt;8&lt;/div&gt;
+			&lt;/div&gt;
+			&lt;hr&gt;
+			&lt;p&gt;
+				&lt;code&gt;flex-flow: row wrap-reverse; /* same as previous, except flex items wrap in the opposite direction of the cross axis*/&lt;/code&gt;
+			&lt;/p&gt;
+			&lt;div class="container container-3"&gt;
+				&lt;div class="item"&gt;1&lt;/div&gt;
+				&lt;div class="item"&gt;2&lt;/div&gt;
+				&lt;div class="item"&gt;3&lt;/div&gt;
+				&lt;div class="item"&gt;4&lt;/div&gt;
+				&lt;div class="item"&gt;5&lt;/div&gt;
+				&lt;div class="item"&gt;6&lt;/div&gt;
+				&lt;div class="item"&gt;7&lt;/div&gt;
+				&lt;div class="item"&gt;8&lt;/div&gt;
+			&lt;/div&gt;
+			&lt;hr&gt;
+			&lt;p&gt;
+				&lt;code&gt;flex-flow: column nowrap; /* the main axis is rotated. In a LRT language and horizontal writing mode like this, the main axis becomes vertical. Items do not wrap and try to fit in one line */&lt;/code&gt;
+			&lt;/p&gt;
+			&lt;div class="container container-4"&gt;
+				&lt;div class="item"&gt;1&lt;/div&gt;
+				&lt;div class="item"&gt;2&lt;/div&gt;
+				&lt;div class="item"&gt;3&lt;/div&gt;
+				&lt;div class="item"&gt;4&lt;/div&gt;
+				&lt;div class="item"&gt;5&lt;/div&gt;
+				&lt;div class="item"&gt;6&lt;/div&gt;
+				&lt;div class="item"&gt;7&lt;/div&gt;
+				&lt;div class="item"&gt;8&lt;/div&gt;
+			&lt;/div&gt;
+			&lt;hr&gt;
+			&lt;p&gt;
+				&lt;code&gt;flex-flow: column wrap; /* flex items wrap. The additional lines that the items wrap into are added horizontally instead of being stacked vertically, because after specifying "column" for the main axis, the cross axis becomes horizontal, and the stacked lines follow the cross axis */&lt;/code&gt;
+			&lt;/p&gt;
+			&lt;div class="container container-5"&gt;
+				&lt;div class="item"&gt;1&lt;/div&gt;
+				&lt;div class="item"&gt;2&lt;/div&gt;
+				&lt;div class="item"&gt;3&lt;/div&gt;
+				&lt;div class="item"&gt;4&lt;/div&gt;
+				&lt;div class="item"&gt;5&lt;/div&gt;
+				&lt;div class="item"&gt;6&lt;/div&gt;
+				&lt;div class="item"&gt;7&lt;/div&gt;
+				&lt;div class="item"&gt;8&lt;/div&gt;
+			&lt;/div&gt;
+			&lt;hr&gt;
+			&lt;p&gt;
+				&lt;code&gt;flex-flow: column wrap-reverse; /* same as previous, except flex items wrap in the opposite direction of the cross axis */&lt;/code&gt;
+			&lt;/p&gt;
+			&lt;div class="container container-6"&gt;
+				&lt;div class="item"&gt;1&lt;/div&gt;
+				&lt;div class="item"&gt;2&lt;/div&gt;
+				&lt;div class="item"&gt;3&lt;/div&gt;
+				&lt;div class="item"&gt;4&lt;/div&gt;
+				&lt;div class="item"&gt;5&lt;/div&gt;
+				&lt;div class="item"&gt;6&lt;/div&gt;
+				&lt;div class="item"&gt;7&lt;/div&gt;
+				&lt;div class="item"&gt;8&lt;/div&gt;
+			&lt;/div&gt;
 		&lt;/div&gt;
 	&lt;/body&gt;
 &lt;/html&gt;
@@ -16932,103 +17104,142 @@ align-items: unset;
 		&lt;style&gt;
 			*{margin:0;padding:0;box-sizing:border-box;}
 
-			.box {
+			body {
+				background-color: #F5F5F5;
+				color: #555;
+				font-size: 1.1em;
+				font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+			}
+
+			hr {
+				margin: 50px 0;
+			}
+			.demo{
+				position:relative;
+				max-width:900px;
+				margin:0 auto;
+				border:4px solid #ddd;
+			}
+
+			.container {
+				position: relative;
+				max-width: 840px;
+				height: 400px;
+				margin: 150px auto;
+				padding: 20px;
+				background-color: #594255;
+
+				-webkit-display: -webkit-box;
+				-webkit-display: -webkit-flex;
+				display: -webkit-box;
+				display: -ms-flexbox;
 				display: flex;
-    		flex-wrap: wrap;
+			}
 
+			.line {
+				visibility: hidden;
+				position: absolute;
+				top: 120px;
+				left: 0;
+				width: 100%;
+				height: 1px;
+				border-bottom: 2px solid deepPink;
+			}
+
+			.item {
+				width: 100px;
+				margin: 1%;
+				background-color: #fff;
+				color: #594255;
+				font-weight: bold;
+				font-family: sans-serif;
+				font-size: 4em;
+				line-height: 100px;
+				text-align: center;
+			}
+
+			.big {
+				width: 150px;
+				font-size: 5em;
+			}
+
+			.small {
+				font-size: 2em;
+			}
+
+			.controls {
+				position: absolute;
+				top: 0;
+				right: 0;
 				width: 300px;
-				height:150px;
-				margin:20px;
-				border: 2px dotted rgb(96, 139, 168);
-			}
-			.box &gt; * {
-				width: 50px;
-				border: 1px solid #8c8c8c;
-				text-align:center;
-			}
-
-			.stretch{
-				align-items: stretch;
-			}
-			.flex-start{
-				align-items: flex-start;
-			}
-			.flex-end{
-				align-items: flex-end;
-			}
-			.center{
-				align-items: center;
-			}
-			.baseline{
-				align-items: baseline;
+				padding: 20px;
+				border: 1px solid #ddd;
+				background-color: white;
+				line-height: 150%;
 			}
 		&lt;/style&gt;
 	&lt;/head&gt;
 	&lt;body&gt;
-		&lt;h2&gt;align-items: stretch;&lt;/h2&gt;
-		&lt;div class="box stretch"&gt;
-			&lt;div&gt;1&lt;/div&gt;
-			&lt;div&gt;2&lt;/div&gt;
-			&lt;div&gt;A&lt;/div&gt;
-			&lt;div&gt;a&lt;/div&gt;
-			&lt;div&gt;가&lt;/div&gt;
-			&lt;div&gt;라&lt;/div&gt;
-			&lt;div&gt;Y&lt;/div&gt;
-			&lt;div&gt;y&lt;/div&gt;
-			&lt;div&gt;g&lt;/div&gt;
-			&lt;div&gt;G&lt;/div&gt;
-		&lt;/div&gt;
-		&lt;h2&gt;align-items: flex-start;&lt;/h2&gt;
-		&lt;div class="box flex-start"&gt;
-			&lt;div&gt;1&lt;/div&gt;
-			&lt;div&gt;2&lt;/div&gt;
-			&lt;div&gt;A&lt;/div&gt;
-			&lt;div&gt;a&lt;/div&gt;
-			&lt;div&gt;가&lt;/div&gt;
-			&lt;div&gt;라&lt;/div&gt;
-			&lt;div&gt;Y&lt;/div&gt;
-			&lt;div&gt;y&lt;/div&gt;
-			&lt;div&gt;g&lt;/div&gt;
-			&lt;div&gt;G&lt;/div&gt;
-		&lt;/div&gt;
-		&lt;h2&gt;align-items: flex-end;&lt;/h2&gt;
-		&lt;div class="box flex-end"&gt;
-			&lt;div&gt;1&lt;/div&gt;
-			&lt;div&gt;2&lt;/div&gt;
-			&lt;div&gt;A&lt;/div&gt;
-			&lt;div&gt;a&lt;/div&gt;
-			&lt;div&gt;가&lt;/div&gt;
-			&lt;div&gt;라&lt;/div&gt;
-			&lt;div&gt;Y&lt;/div&gt;
-			&lt;div&gt;y&lt;/div&gt;
-			&lt;div&gt;g&lt;/div&gt;
-			&lt;div&gt;G&lt;/div&gt;
-		&lt;/div&gt;
-		&lt;h2&gt;align-items: center;&lt;/h2&gt;
-		&lt;div class="box center"&gt;
-			&lt;div&gt;1&lt;/div&gt;
-			&lt;div&gt;2&lt;/div&gt;
-			&lt;div&gt;A&lt;/div&gt;
-			&lt;div&gt;a&lt;/div&gt;
-			&lt;div&gt;가&lt;/div&gt;
-			&lt;div&gt;라&lt;/div&gt;
-			&lt;div&gt;Y&lt;/div&gt;
-			&lt;div&gt;y&lt;/div&gt;
-			&lt;div&gt;g&lt;/div&gt;
-			&lt;div&gt;G&lt;/div&gt;
-		&lt;/div&gt;
-		&lt;h2&gt;align-items: baseline;&lt;/h2&gt;
-		&lt;div class="box baseline"&gt;
-			&lt;div&gt;1&lt;/div&gt;
-			&lt;div&gt;2&lt;/div&gt;
-			&lt;div&gt;A&lt;/div&gt;
-			&lt;div&gt;a&lt;/div&gt;
-			&lt;div&gt;가&lt;/div&gt;
-			&lt;div&gt;라&lt;/div&gt;
-			&lt;div&gt;Y&lt;/div&gt;
-			&lt;div&gt;y&lt;/div&gt;
-			&lt;div&gt;g&lt;/div&gt;
-			&lt;div&gt;G&lt;/div&gt;
+		&lt;div class="demo"&gt;
+			&lt;div class="container" id="container"&gt;
+				&lt;div class="item big"&gt;1&lt;/div&gt;
+				&lt;div class="item"&gt;2&lt;/div&gt;
+				&lt;div class="item small"&gt;3&lt;/div&gt;
+				&lt;div class="item big"&gt;4&lt;/div&gt;
+				&lt;div class="item"&gt;5&lt;/div&gt;
+				&lt;div class="line" id="line"&gt;&lt;/div&gt;
+			&lt;/div&gt;
+			&lt;div class="controls"&gt;
+				&lt;input type="radio" name="align-items" id="flex-start" 
+							onclick="
+												var container=document.getElementById('container'); 
+												container.style.WebkitAlignItems = 'flex-start';
+												container.style.alignItems = 'flex-start'; 
+												var line = document.getElementById('line'); 
+												line.style.visibility = 'hidden';  
+												"&gt;
+				&lt;label for="flex-start"&gt;align-items: flex-start;&lt;/label&gt;
+				&lt;br&gt;
+				&lt;input type="radio" name="align-items" id="flex-end" 
+							onclick="
+												var container=document.getElementById('container'); 
+												container.style.WebkitAlignItems = 'flex-end'; 
+												container.style.alignItems = 'flex-end'; 
+												var line = document.getElementById('line'); 
+												line.style.visibility = 'hidden';  
+												"&gt;
+				&lt;label for="flex-end"&gt;align-items: flex-end;&lt;/label&gt;
+				&lt;br&gt;
+				&lt;input type="radio" name="align-items" id="center" 
+							onclick="
+												var container=document.getElementById('container'); 
+												container.style.WebkitAlignItems = 'center'; 
+												container.style.alignItems = 'center'; 
+												var line = document.getElementById('line'); 
+												line.style.visibility = 'hidden';  
+												"&gt;
+				&lt;label for="center"&gt;align-items: center;&lt;/label&gt;
+				&lt;br&gt;
+				&lt;input type="radio" name="align-items" id="baseline" 
+							onclick="
+												var container=document.getElementById('container'); 
+												container.style.WebkitAlignItems = 'baseline'; 
+												container.style.alignItems = 'baseline'; 
+												var line = document.getElementById('line'); 
+												line.style.visibility = 'visible'; 
+												"&gt;
+				&lt;label for="baseline"&gt;align-items: baseline;&lt;/label&gt;
+				&lt;br&gt;
+				&lt;input type="radio" name="align-items" id="stretch" 
+							onclick="
+												var container=document.getElementById('container');
+												container.style.WebkitAlignItems = 'stretch';  
+												container.style.alignItems = 'stretch'; 
+												var line = document.getElementById('line'); 
+												line.style.visibility = 'hidden'; 
+												" checked&gt;
+				&lt;label for="stretch"&gt;align-items: stretch;&lt;/label&gt;
+			&lt;/div&gt;
 		&lt;/div&gt;
 	&lt;/body&gt;
 &lt;/html&gt;
