- 전체 수정 중

--- a/assets/guide.html
+++ b/assets/guide.html
@@ -119,30 +119,32 @@
 		</dl>
 		<!-- line_code -->
 
-		<ul class="browser_support mt_l" data-tit="class">
-			<li class="ie false">지원안함</li>
-			<li class="edge">지원</li>
-			<li class="chrome">지원</li>
-			<li class="firefox">지원</li>
-			<li class="opera">지원</li>
-			<li class="safari">지원</li>
-		</ul>
+		<aside class="browser_support mt_l" data-tit="class">
+			<ul>
+				<li class="ie false">지원안함</li>
+				<li class="edge">지원</li>
+				<li class="chrome">지원</li>
+				<li class="firefox">지원</li>
+				<li class="opera">지원</li>
+				<li class="safari">지원</li>
+			</ul>
+		</aside>
 		<!-- browser_support -->
 
-		<div class="view_editor ex_code mt_l" data-target="html/01-htmlStart/1.1.html_basic.html">
+		<section class="view_editor ex_code mt_l" data-target="html/01-htmlStart/1.1.html_basic.html">
 			<h3 class="ve_tit">코드 설명용 에디터</h3>
 			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
-		</div>
+		</section>
 		<!-- 코드 설명용 에디터 -->
 
-		<div class="view_editor edit_code mt_l" data-target="html/01-htmlStart/1.1.html_basic.html">
+		<section class="view_editor edit_code mt_l" data-target="html/01-htmlStart/1.1.html_basic.html">
 			<h3 class="ve_tit">코드 편집용 에디터</h3>
 			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
-		</div>
+		</section>
 		<!-- 코드 편집용 에디터 -->
 
 		<p class="reference mt_l">참조 : <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTML_Drag_and_Drop_API" target="_blank">Drag and Drop API</a></p>
