--- a/assets/01-html/02-blockInline/02-div_block.html
+++ b/assets/01-html/02-blockInline/02-div_block.html
@@ -8,8 +8,8 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			&lt;div&gt;요소는 다른 HTML 요소들을 하나로 묶는 데 자주 사용되는 대표적인 블록(block) 요소입니다.<br>
-			&lt;div&gt;요소는 주로 여러 요소들의 스타일을 한 번에 적용하기 위해 사용됩니다.
+			<code>&lt;div&gt;</code>요소는 다른 HTML 요소들을 하나로 묶는 데 자주 사용되는 대표적인 블록(block) 요소입니다.<br>
+			<code>&lt;div&gt;</code>요소는 주로 여러 요소들의 스타일을 한 번에 적용하기 위해 사용됩니다.
 		</p>
 	</section>
 
