--- a/assets/01-html/02-blockInline/04-span_inline.html
+++ b/assets/01-html/02-blockInline/04-span_inline.html
@@ -8,8 +8,8 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			&lt;span&gt;요소는 텍스트(text)의 특정 부분을 묶는 데 자주 사용되는 인라인(inline) 요소입니다.<br>
-			&lt;span&gt;요소는 주로 텍스트의 특정 부분에 따로 스타일을 적용하기 위해 사용됩니다.
+			<code>&lt;span&gt;</code>요소는 텍스트(text)의 특정 부분을 묶는 데 자주 사용되는 인라인(inline) 요소입니다.<br>
+			<code>&lt;span&gt;</code>요소는 주로 텍스트의 특정 부분에 따로 스타일을 적용하기 위해 사용됩니다.
 		</p>
 	</section>
 
