--- a/assets/01-html/02-blockInline/06-only_empty.html
+++ b/assets/01-html/02-blockInline/06-only_empty.html
@@ -9,7 +9,7 @@
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
 			이런 요소들은 내용을 갖지 않습니다, 이러한 요소를 빈 요소(empty elements)라고 합니다.<br>
-			대표적으로 meta, link, img, hr, br 요소가 있습니다.
+			대표적으로 <code>&lt;meta&gt;</code>, <code>&lt;link&gt;</code>, <code>&lt;img&gt;</code>, <code>&lt;hr&gt;</code>, <code>&lt;br&gt;</code> 요소가 있습니다.
 		</p>
 	</section>
 
@@ -22,7 +22,7 @@
 	<section class="mt_m">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			이 요소는 두 개의 속성을 포함하고 있으나 닫는 &lt;/img&gt; 태그가 없습니다.<br>
+			이 요소는 두 개의 속성을 포함하고 있으나 닫는 <code>&lt;/img&gt;</code> 태그가 없습니다.<br>
 			이미지 요소는 효과를 주기 위해 콘텐츠를 감싸지 않기 때문입니다.<br>
 			이 요소의 목적은 HTML 페이지에서 이미지가 나타날 위치에 이미지를 끼워 넣는 것입니다.
 		</p>
