--- a/assets/01-html/03-sections/01-header_element.html
+++ b/assets/01-html/03-sections/01-header_element.html
@@ -8,32 +8,33 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			&lt;header&gt; 요소는 소개나 탐색을 돕는것의 그룹을 나타냅니다.<br>
+			<code>&lt;header&gt;</code> 요소는 소개나 탐색을 돕는것의 그룹을 나타냅니다.<br>
 			일부 제목 요소들을 포함할 수도 있지만, 로고나 그룹의 제목, 탐색 폼과 같은것들이 포함될 수도 있습니다.
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_m" data-target="html/03-sections/3.1.header_element1.html">
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
-		</div>
-	</section>
+	<section class="view_editor ex_code mt_l">
+		<h2 class="ve_tit">예제</h2>
 
-	<section class="view_editor ex_code mt_m" data-target="html/03-sections/3.1.header_element2.html">
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
+		<div class="view_editor ex_code" data-target="html/03-sections/3.1.header_element1.html">
+			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+				<div class="code_wrap"><textarea></textarea></div>
+			</div>
 		</div>
-	</section>
-
-	<section class="view_editor ex_code mt_m" data-target="html/03-sections/3.1.header_element3.html">
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
+		<div class="view_editor ex_code mt_s" data-target="html/03-sections/3.1.header_element2.html">
+			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+				<div class="code_wrap"><textarea></textarea></div>
+			</div>
 		</div>
-	</section>
-
-	<section class="view_editor ex_code mt_m" data-target="html/03-sections/3.1.header_element4.html">
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
+		<div class="view_editor ex_code mt_s" data-target="html/03-sections/3.1.header_element3.html">
+			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+				<div class="code_wrap"><textarea></textarea></div>
+			</div>
+		</div>
+		<div class="view_editor ex_code mt_s" data-target="html/03-sections/3.1.header_element4.html">
+			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+				<div class="code_wrap"><textarea></textarea></div>
+			</div>
 		</div>
 	</section>
 
