--- a/assets/01-html/03-sections/04-nav_element.html
+++ b/assets/01-html/03-sections/04-nav_element.html
@@ -8,17 +8,18 @@
 	<section class="ol_lst mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			&lt;nav&gt; 요소는 현재 페이지 안 또는 다른 페이지로 가는 링크를 보여주는 페이지의 한 구조를 말합니다. 주로 태그 안에 메뉴, 목차, 색인 등이 들어갑니다.
+			<code>&lt;nav&gt;</code> 요소는 현재 페이지 안 또는 다른 페이지로 가는 링크를 보여주는 페이지의 한 구조를 말합니다. 주로 태그 안에 메뉴, 목차, 색인 등이 들어갑니다.
 		</p>
 		<ol class="indent">
-			<li>문서의 모든 링크가 nav 요소 안에 있을 필요는 없습니다.</li>
-			<li>nav 요소는 주요 블록의 탐색 링크를 위해 사용됨.</li>
-			<li>문서는 여러개의 nav 태그를 소유할수 있습니다. 예를 들면, 하나는 사이트 탐색에, 다른 하나는 내부 페이지 탐색을 위해 사용할 수 있습니다.</li>
+			<li>문서의 모든 링크가 <code>&lt;nav&gt;</code> 요소 안에 있을 필요는 없습니다.</li>
+			<li><code>&lt;nav&gt;</code> 요소는 주요 블록의 탐색 링크를 위해 사용됨.</li>
+			<li>문서는 여러개의 <code>&lt;nav&gt;</code> 태그를 소유할수 있습니다. 예를 들면, 하나는 사이트 탐색에, 다른 하나는 내부 페이지 탐색을 위해 사용할 수 있습니다.</li>
 			<li>장애를 가진 사용자가 이용하는 스크린 리더와 같은 사용자 에이전트는 처음 콘텐츠가 랜더링될 때 이 요소를 제거할 것인지를 결정할 수 있습니다.</li>
 		</ol>
 	</section>
 
-	<section class="view_editor ex_code mt_m" data-target="html/03-sections/3.4.nav_element.html">
+	<section class="view_editor ex_code mt_l" data-target="html/03-sections/3.4.nav_element.html">
+		<h2 class="ve_tit">기본 문법</h2>
 		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
