--- a/assets/01-html/03-sections/05-article_element.html
+++ b/assets/01-html/03-sections/05-article_element.html
@@ -7,17 +7,25 @@
 
 	<section class="mt_l">
 		<h2 class="sound_only"></h2>
-		<p>&lt;article&gt; HTML &lt;article&gt; 요소는 문서, 페이지, 애플리케이션, 또는 사이트 안에 독립적으로 구분되거나 재사용 가능한 영역(예: 신디케이션)을 구성할 수 있습니다. 포럼의 글, 매거진/신문의 기사, 블로그 글 등이 여기에 포함됩니다.</p>
+		<p>
+			<code>&lt;article&gt; HTML &lt;article&gt;</code> 요소는 문서, 페이지, 애플리케이션,
+			또는 사이트 안에 독립적으로 구분되거나 재사용 가능한 영역(예: 신디케이션)을 구성할 수 있습니다.
+			포럼의 글, 매거진/신문의 기사, 블로그 글 등이 여기에 포함됩니다.
+		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_m" data-target="html/03-sections/3.5.article_element1.html">
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
+
+	<section class="view_editor ex_code mt_l">
+		<h2 class="ve_tit">기본 문법</h2>
+		<div class="view_editor ex_code" data-target="html/03-sections/3.5.article_element1.html">
+			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+				<div class="code_wrap"><textarea></textarea></div>
+			</div>
 		</div>
-	</section>
-	<section class="view_editor ex_code mt_m" data-target="html/03-sections/3.5.article_element2.html">
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
+		<div class="view_editor ex_code mt_s" data-target="html/03-sections/3.5.article_element2.html">
+			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+				<div class="code_wrap"><textarea></textarea></div>
+			</div>
 		</div>
 	</section>
 
