--- a/assets/01-html/04-grouping/07-dt_element.html
+++ b/assets/01-html/04-grouping/07-dt_element.html
@@ -9,9 +9,10 @@
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
 			dt(Definition Term Element)는 정의 목록에서 용어를 구분합니다.<br>
-			이 요소는 &lt;dl&gt; 요소의 자식으로서만 등장할수 있습니다.<br>
-			보통 이것은 &lt;dd&gt;요소 전에 나오는데, 연속적으로 나오는 여러개의 &lt;dt&gt;요소는 바로 다음에 나오는 &lt;dd&gt;요소에 의해 정의되는 몇개의 용어를 가르킵니다.<br>
-			종료 태그는 이 요소 바로 뒤에 다른 &lt;dd&gt; 태그가 따라오거나, 부모 요소에 더 이상 다른 요소가 없을떄 생략 가능함.<br>
+			이 요소는 <code>&lt;dl&gt;</code> 요소의 자식으로서만 등장할수 있습니다.<br>
+			보통 이것은 <code>&lt;dd&gt;</code>요소 전에 나오는데, 연속적으로 나오는 여러개의 <code>&lt;dt&gt;</code>요소는
+			바로 다음에 나오는 <code>&lt;dd&gt;</code>요소에 의해 정의되는 몇개의 용어를 가르킵니다.<br>
+			종료 태그는 이 요소 바로 뒤에 다른 <code>&lt;dd&gt;</code> 태그가 따라오거나, 부모 요소에 더 이상 다른 요소가 없을떄 생략 가능함.<br>
 			습관적으로 종료 태그는 사용 해주는것을 권장합니다.
 		</p>
 	</section>
