--- a/assets/01-html/04-grouping/09-address_element.html
+++ b/assets/01-html/04-grouping/09-address_element.html
@@ -8,7 +8,8 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			&lt;address&gt; 요소는 작성자가 가까운 &lt;article&gt; 또는 &lt;body&gt; 에 대한 연락처 정보를 제공하기 위해 사용됩니다. 후자의 경우에는 문서 전체에 적용됩니다.
+			<code>&lt;address&gt;</code> 요소는 작성자가 가까운 <code>&lt;article&gt;</code> 또는 <code>&lt;body&gt;</code>
+			에 대한 연락처 정보를 제공하기 위해 사용됩니다. 후자의 경우에는 문서 전체에 적용됩니다.
 		</p>
 	</section>
 
