--- a/assets/01-html/04-grouping/11-figcaption_element.html
+++ b/assets/01-html/04-grouping/11-figcaption_element.html
@@ -8,7 +8,7 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			&lt;figcaption&gt; 요소는 부모 &lt;figure&gt; 요소가 포함하는 도표나 도해 등의 다른 데이터에 대해 그에 관련된 설명 또는 범례를 표현합니다.
+			<code>&lt;figcaption&gt;</code> 요소는 부모 <code>&lt;figure&gt;</code> 요소가 포함하는 도표나 도해 등의 다른 데이터에 대해 그에 관련된 설명 또는 범례를 표현합니다.
 		</p>
 	</section>
 
