--- a/assets/01-html/01-htmlStart/03-html_element.html
+++ b/assets/01-html/01-htmlStart/03-html_element.html
@@ -258,8 +258,8 @@
 
 				이 속성은 Boolean 속성이 아니라 열거형 속성입니다.<br>
 				이는 속성값으로 true, false 또는 빈 문자열 중 하나를 명시적으로 사용하는 것이 필수적이라는 것을 의미하며,<br>
-				&lt;label contenteditable&gt;Example Label&lt;/label&gt;와 같은 축약적인 표현은 허용되지 않습니다.<br>
-				올바른 사용법은 &lt;label contenteditable=&quot;true&quot;&gt;Example Label&lt;/label&gt; 입니다.
+				<code>&lt;label contenteditable&gt;Example Label&lt;/label&gt;</code>와 같은 축약적인 표현은 허용되지 않습니다.<br>
+				올바른 사용법은 <code>&lt;label contenteditable=&quot;true&quot;&gt;Example Label&lt;/label&gt;</code> 입니다.
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/01-htmlStart/1.3.contenteditable.html">
 				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
@@ -302,8 +302,8 @@
 				</ol>
 			</div>
 			<p class="mt_sm">
-				이 속성은 의미적으로 다른 뜻을 가지는 &lt;bdo&gt; 요소에 필수 속성입니다.<br>
-				이 속성은 &lt;bdi&gt; 요소의 속성을 상속하지 않습니다. 따로 설정되지 않으면 그 값은 auto입니다.<br>
+				이 속성은 의미적으로 다른 뜻을 가지는 <code>&lt;bdo&gt;</code> 요소에 필수 속성입니다.<br>
+				이 속성은 <code>&lt;bdi&gt;</code> 요소의 속성을 상속하지 않습니다. 따로 설정되지 않으면 그 값은 auto입니다.<br>
 				CSS 페이지가 활성화되고 해당 요소가 CSS 속성인 direction와 unicode-bidi을 지원하는 경우, 이들 속성에 의해 오버라이드될 수 있습니다.<br>
 				텍스트의 방향은 내용과 의미적으로 관련되고 표시 방식과는 관련이 없으므로 웹 개발자는 가능한 관련 CSS속성 대신 이 속성을 사용하는 것이 좋습니다.<br>
 				이렇게 하면 CSS를 지원하지 않거나 CSS가 비활성화된 브라우저에서도 텍스트가 올바르게 표시됩니다.<br>
