--- a/assets/01-html/02-blockInline/05-element_nesting.html
+++ b/assets/01-html/02-blockInline/05-element_nesting.html
@@ -20,7 +20,11 @@
 	<blockquote class="uk_note mt_l" role="note">
 		<h2 class="sound_only">요약 설명</h2>
 		<p>마크업 시 요소가 적절히 중첩되었는지 확인할 필요가 있습니다.</p>
-		<p>위의 예제에서 우리는 p 요소를 먼저 열었고, 그다음 strong을 열었기 때문에 strong 요소를 먼저 닫고, 다음으로 p를 닫아야 합니다.</p>
+		<p>
+			위의 예제에서 우리는 <code>&lt;p&gt;</code> 요소를 먼저 열었고,
+			그다음 <code>&lt;strong&gt;</code>을 열었기 때문에 <code>&lt;/strong&gt;</code> 요소를 먼저 닫고,
+			다음으로 <code>&lt;/p&gt;</code>를 닫아야 합니다.
+		</p>
 		<p>블록 요소안에 인라인 요소는 중첩 될 수 있으나, 인라인 요소에 블록요소는 중첩 될 수 없습니다.</p>
 		<p>다음은 잘못된 예제입니다.</p>
 	</blockquote>
