--- a/assets/01-html/03-sections/03-section_element.html
+++ b/assets/01-html/03-sections/03-section_element.html
@@ -8,24 +8,30 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			&lt;section&gt;는 문서의 일반적인 구조를 나타냅니다.<br>
+			<code>&lt;section&gt;</code>는 문서의 일반적인 구조를 나타냅니다.<br>
 			즉, (전형적으로 제목을 가지고 있는) 콘텐츠의 주제 그룹을 말합니다.<br>
-			각 &lt;section&gt;은 식별되어야하며, 일반적으로 (&lt;h1&gt;-&lt;h6&gt; 요소들을 자식으로 가집니다.)<br>
-			각 섹션은 자기들만의 제목 계층을 가질 수 있습니다. 그래서, 중첩된 섹션이라도 &lt;h1&gt; 제목을 가질 수 있습니다.
+			각 <code>&lt;section&gt;</code>은 식별되어야하며, 일반적으로 (<code>&lt;h1&gt;-&lt;h6&gt;</code> 요소들을 자식으로 가집니다.)<br>
+			각 섹션은 자기들만의 제목 계층을 가질 수 있습니다. 그래서, 중첩된 섹션이라도 <code>&lt;h1&gt;</code> 제목을 가질 수 있습니다.
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_m" data-target="html/03-sections/3.3.section_element1.html">
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
+	<section class="view_editor ex_code mt_l">
+		<h2 class="ve_tit">기본 문법</h2>
+		<div class="view_editor ex_code" data-target="html/03-sections/3.3.section_element1.html">
+			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+				<div class="code_wrap"><textarea></textarea></div>
+			</div>
+		</div>
+		<div class="view_editor ex_code mt_s" data-target="html/03-sections/3.3.section_element2.html">
+			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
+				<div class="code_wrap"><textarea></textarea></div>
+			</div>
 		</div>
 	</section>
-	<section class="view_editor ex_code mt_m" data-target="html/03-sections/3.3.section_element2.html">
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
-		</div>
-	</section>
-	<section class="view_editor edit_code mt_m" data-target="html/03-sections/3.3.section_element3.html">
+
+
+	<section class="view_editor edit_code mt_l" data-target="html/03-sections/3.3.section_element3.html">
+		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
