--- a/assets/01-html/03-sections/07-aside_element.html
+++ b/assets/01-html/03-sections/07-aside_element.html
@@ -8,16 +8,19 @@
 	<section class="mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			&lt;aside&gt; 요소는 문서의 주요 콘텐츠에 별도로 이어진 콘텐츠가 있는 문서의 한 구조를 말합니다. 주로 사이드바로 나타냅니다.
+			<code>&lt;aside&gt;</code> 요소는 문서의 주요 콘텐츠에 별도로 이어진 콘텐츠가 있는 문서의 한 구조를 말합니다. 주로 사이드바로 나타냅니다.
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_m" data-target="html/03-sections/3.7.aside_element1.html">
+	<section class="view_editor ex_code mt_l" data-target="html/03-sections/3.7.aside_element1.html">
+		<h2 class="ve_tit">기본 문법</h2>
 		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
-	<section class="view_editor edit_code mt_m" data-target="html/03-sections/3.7.aside_element2.html">
+
+	<section class="view_editor edit_code mt_l" data-target="html/03-sections/3.7.aside_element2.html">
+		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
