--- a/assets/01-html/04-grouping/02-p_element.html
+++ b/assets/01-html/04-grouping/02-p_element.html
@@ -8,8 +8,14 @@
 	<blockquote class="uk_note mt_m" role="note">
 		<h2 class="sound_only">요약 설명</h2>
 		<p>
-			시작 태그는 필수이며, 닫는 태그는 &lt;p&gt; 요소의 바로 뒤에 &lt;address&gt;, &lt;article&gt;, &lt;aside&gt;, &lt;blockquote&gt;, &lt;div&gt;, &lt;dl&gt;, &lt;fieldset&gt;, &lt;footer&gt;, &lt;form&gt;, &lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, &lt;h4&gt;, &lt;h5&gt;, &lt;h6&gt;, &lt;header&gt;, &lt;hr&gt;, &lt;menu&gt;, &lt;nav&gt;, &lt;ol&gt;, &lt;pre&gt;, &lt;section&gt;, &lt;table&gt;, &lt;ul&gt;, &lt;p&gt; 요소가 위치하는 경우 또는, 부모 태그의 콘텐츠가 더 존재하지 않고 부모가 &lt;a&gt; 요소가 아닐 때 생략할 수 있습니다.
-			<br><br>
+			시작 태그는 필수이며, 닫는 태그는 <code>&lt;p&gt;</code> 요소의 바로 뒤에
+			<code>&lt;address&gt;</code>, <code>&lt;article&gt;</code>, <code>&lt;aside&gt;</code>, <code>&lt;blockquote&gt;</code>,
+			<code>&lt;div&gt;</code>, <code>&lt;dl&gt;</code>, <code>&lt;fieldset&gt;</code>, <code>&lt;footer&gt;</code>, <code>&lt;form&gt;</code>,
+			<code>&lt;h1&gt;</code>, <code>&lt;h2&gt;</code>, <code>&lt;h3&gt;</code>, <code>&lt;h4&gt;</code>, <code>&lt;h5&gt;</code>, <code>&lt;h6&gt;</code>,
+			<code>&lt;header&gt;</code>, <code>&lt;hr&gt;</code>, <code>&lt;menu&gt;</code>, <code>&lt;nav&gt;</code>, <code>&lt;ol&gt;</code>,
+			<code>&lt;pre&gt;</code>, <code>&lt;section&gt;</code>, <code>&lt;table&gt;</code>, <code>&lt;ul&gt;</code>, <code>&lt;p&gt;</code>
+			요소가 위치하는 경우 또는, 부모 태그의 콘텐츠가 더 존재하지 않고 부모가 <code>&lt;a&gt;</code> 요소가 아닐 때 생략할 수 있습니다.
+			<br>
 			습관적으로 종료 태그는 사용 해주는것을 권장합니다.
 		</p>
 	</blockquote>
@@ -18,13 +24,13 @@
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
 			단락(Paragraph)이란 내용상 끊어서 구분할 수 있는 하나하나의 부분을 의미하며, 문단이라고도 부릅니다.<br>
-			HTML에서는 &lt;p&gt;태그를 이용하여 이러한 단락을 표현합니다.<br>
+			HTML에서는 <code>&lt;p&gt;</code>태그를 이용하여 이러한 단락을 표현합니다.<br>
 			브라우저 기본 스타일은 문단끼리 한 줄의 간격으로 분리합니다. 첫 줄 들여쓰기 등 다른 구분 방법은 CSS를 통해 사용할 수 있습니다.
 		</p>
 		<ol class="indent">
 			<li>콘텐츠를 문단으로 나누면 페이지의 접근성을 높입니다.</li>
 			<li>스크린 리더 등 보조 기술은 다음 문단으로 넘어갈 수 있는 단축키 등을 제공하므로, 시각적 매체의 여백이 사용자의 빠른 콘텐츠 탐색을 돕는 것과 같은 효과를 얻을 수 있습니다.</li>
-			<li>빈 &lt;p&gt; 요소를 사용해 두 문단에 여백을 추가하는건 스크린 리더 사용자에게 부정적인 경험을 줄 수 있습니다.</li>
+			<li>빈 <code>&lt;p&gt;</code> 요소를 사용해 두 문단에 여백을 추가하는건 스크린 리더 사용자에게 부정적인 경험을 줄 수 있습니다.</li>
 			<li>스크린 리더가 문단의 존재는 알려주고서 그 내용은, 사실 아무 내용도 없기 때문에, 읽지 않을 것이기 때문에 스크린 리더 사용자는 혼란스러울 수 있습니다.</li>
 			<li>여분의 공간이 필요하다면 margin 등 CSS 속성을 통해 적용하세요.</li>
 		</ol>
