--- a/assets/01-html/05-textLevel/01-a_element.html
+++ b/assets/01-html/05-textLevel/01-a_element.html
@@ -9,7 +9,7 @@
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
 			해당 요소는 하나의 페이지에서 다른 페이지를 연결할 때 사용하는 하이퍼링크(hyperlink)를 정의할 때 사용합니다.<br>
-			이러한 &lt;a&gt; 요소에서 가장 중요한 속성은 바로 링크(link)의 목적지를 가리키는 href(Hyper text REFerence) 속성입니다.<br>
+			이러한 <code>&lt;a&gt;</code> 요소에서 가장 중요한 속성은 바로 링크(link)의 목적지를 가리키는 href(Hyper text REFerence) 속성입니다.<br>
 			따라서 href 속성이 없다면, target, download, rel, rev, hreflang, type, referrerpolicy 속성들도 사용할 수 없습니다.<br>
 			링크된 페이지는 보통 브라우저의 현재 윈도우에 표시되며, 이것은 target 속성으로 변경할 수 있습니다.<br>
 			<mark>HTML5에서는 해당 요소의 charset, coords, name, rev, shape 속성을 더 이상 지원하지 않습니다.</mark>
@@ -28,7 +28,7 @@
 			</li>
 			<li class="line_code font14 mt_m">
 				<strong>HTML5에서 변경된 사항</strong>
-				<p>HTML 4.01에서 &lt;a&gt; 요소는 하이퍼링크(hyperlink)로도 앵커(anchor)로도 모두 사용할 수 있었습니다.</p>
+				<p>HTML 4.01에서 <code>&lt;a&gt;</code> 요소는 하이퍼링크(hyperlink)로도 앵커(anchor)로도 모두 사용할 수 있었습니다.</p>
 				<p>하지만 HTML5에서는 언제나 하이퍼링크로만 사용되며, href 속성이 없는 경우에는 나중에 추가될지도 모르는 하이퍼링크를 위한 표시(placeholder) 역할만을 할 뿐입니다.</p>
 			</li>
 		</ol>
@@ -40,7 +40,7 @@
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[href] <span class="t_blue">&lt;a href=&quot;URL 주소&quot;&gt;</span></h3>
 			<p class="mt_sm">
-				&lt;a&gt; 요소의 href(Hyper text REFerence) 속성은 링크된 페이지의 URL을 명시합니다. URL은 HTTP 기반 문서 외에서도 쓰입니다. URL은 브라우저가 지원하는 어떠한 프로토콜에도 사용할 수도 있습니다. 예로, 사용자 환경에서는 file, ftp, 그리고 mailto 링크가 많이 사용됩니다.
+				<code>&lt;a&gt;</code> 요소의 href(Hyper text REFerence) 속성은 링크된 페이지의 URL을 명시합니다. URL은 HTTP 기반 문서 외에서도 쓰입니다. URL은 브라우저가 지원하는 어떠한 프로토콜에도 사용할 수도 있습니다. 예로, 사용자 환경에서는 file, ftp, 그리고 mailto 링크가 많이 사용됩니다.
 			</p>
 		</article>
 		<!-- href -->
@@ -48,7 +48,7 @@
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[rel] <span class="t_blue">&lt;a href=&quot;URL 주소&quot; rel=&quot;속성값&quot;&gt;</span></h3>
 			<p class="mt_sm">
-				&lt;a&gt; 요소의 rel(relationship) 속성은 현재 문서와 링크된 문서 사이의 연관 관계(relationship)를 명시합니다.<br>
+				<code>&lt;a&gt;</code> 요소의 rel(relationship) 속성은 현재 문서와 링크된 문서 사이의 연관 관계(relationship)를 명시합니다.<br>
 				여러 검색 엔진들은 링크에 대한 더 많은 정보를 수집하기 위해 이 속성을 사용할 수 있습니다.<br>
 				이 속성은 반드시 href 속성이 설정되어 있어야만 사용할 수 있습니다.
 			</p>
@@ -119,7 +119,7 @@
 				</div>
 			</div>
 			<p class="mt_sm">
-				&lt;a&gt; 요소의 hreflang 속성은 링크된 문서의 언어를 명시하지만, 단순히 참고 용도로만 사용됩니다.<br>
+				<code>&lt;a&gt;</code> 요소의 hreflang 속성은 링크된 문서의 언어를 명시하지만, 단순히 참고 용도로만 사용됩니다.<br>
 				이 속성은 반드시 href 속성이 설정되어 있어야만 사용할 수 있습니다.
 			</p>
 		</article>
@@ -133,8 +133,7 @@
 				</div>
 			</div>
 			<p class="mt_sm">
-				target 속성 - &lt;a href=&quot;URL 주소&quot; target=&quot;_blank|_self|_parent|_top&quot;&gt;<br>
-				&lt;a&gt; 요소의 target 속성은 링크한 URL을 어디에 표시할건지 지정합니다. 가능한 값은 브라우징 문맥, 즉 탭, 창, 또는 &lt;iframe&gt;의 이름 또는 키워드입니다. 다음 키워드는 특별한 뜻을 가지고 있습니다.
+				<code>&lt;a&gt;</code> 요소의 target 속성은 링크한 URL을 어디에 표시할건지 지정합니다. 가능한 값은 브라우징 문맥, 즉 탭, 창, 또는 &lt;iframe&gt;의 이름 또는 키워드입니다. 다음 키워드는 특별한 뜻을 가지고 있습니다.
 			</p>
 			<div class="ol_lst indent mt_sm">
 				<ol>
@@ -155,8 +154,7 @@
 				</div>
 			</div>
 			<p class="mt_sm">
-				type 속성 - &lt;a href=&quot;https://uxkm.github.io&quot; type=&quot;text/html&quot;&gt;UXKM 사이트로 이동!&lt;/a&gt;<br>
-				&lt;a&gt; 요소의 이 속성은 미디어 유형을 링크 대상에 대한 MIME 유형의 형태로 지정합니다. 일반적으로, 이것은 엄격히 자문 정보를 제공합니다.<br>
+				<code>&lt;a&gt;</code> 요소의 이 속성은 미디어 유형을 링크 대상에 대한 MIME 유형의 형태로 지정합니다. 일반적으로, 이것은 엄격히 자문 정보를 제공합니다.<br>
 				브라우저는 멀티미디어 유형에 작은 아이콘을 추가 할 수 있습니다. 예를 들어, 유형이 audio/wav로 설정된 경우 브라우저가 작은 스피커 아이콘을 추가 할 수 있습니다.<br>
 				MIME 형식의 전체 목록을 보려면
 				<span class="reference"><a href="http://www.w3.org/TR/html4/references.html#ref-MIMETYPES" target="_blank" class="fas">http://www.w3.org/TR/html4/references.html#ref-MIMETYPES</a></span>
@@ -187,7 +185,7 @@
 				</div>
 			</div>
 			<p class="mt_sm">
-				&lt;a&gt; 요소의 download 속성은 사용자가 하이퍼링크를 클릭할 때 해당 대상(target)으로 연결되지 않고 대신 해당 콘텐츠가 다운로드됨을 명시합니다.<br>
+				<code>&lt;a&gt;</code> 요소의 download 속성은 사용자가 하이퍼링크를 클릭할 때 해당 대상(target)으로 연결되지 않고 대신 해당 콘텐츠가 다운로드됨을 명시합니다.<br>
 				이 속성의 속성값은 다운로드되는 파일의 이름이 되며, 그 값에 특별한 제약은 없습니다.<br>
 				브라우저는 다운로드되는 파일의 정확한 확장자명을 확인하여, 자동으로 파일 이름 끝에 추가합니다. (.html, .pdf, .jpg 등)<br>
 				만약 download 속성의 속성값을 생략하면, 다운로드되는 파일의 원래 이름이 사용됩니다.<br>
