--- a/assets/01-html/05-textLevel/04-strong_element.html
+++ b/assets/01-html/05-textLevel/04-strong_element.html
@@ -24,18 +24,18 @@
 	</section>
 
 	<section class="txt_ex mt_l">
-		<h2><code>&lt;strong&gt;</code> vs. <code>&lt;em&gt;</code></h2>
+		<h2><mark><code>&lt;strong&gt;</code></mark> vs. <mark><code>&lt;em&gt;</code></mark></h2>
 		<p class="indent">
 			HTML4에서 Strong 은 좀 더 강한 emphasis로 인식되었습니다.
-			하지만 HTML5에서 Strong 태그는 &quot;content에서 가장 중요한 부분&quot;을 나타냅니다. 이것이 가장 큰 차이점입니다.
+			하지만 HTML5에서 <code>&lt;strong&gt;</code> 태그는 &quot;content에서 가장 중요한 부분&quot;을 나타냅니다. 이것이 가장 큰 차이점입니다.
 			Emphasis는 (&quot;I love carrots&quot; vs. &quot;I love carrots&quot;) 와 같은 구어체 강조와 같이 문장의 의미를 변경하는데 사용되지만,
-			Strong은 (e.g., &quot;Warning! This is very dangerous.&quot;) 와 같이 문장의 일부분에 중요도를 추가하고 싶을 때 사용됩니다.
-			Strong과 Emphasis 는 각각 중첩해서 사용함으로써 중요성이나 강조의 상대적인 정도를 증가시킬 수 있습니다.
+			<code>&lt;strong&gt;</code>은 (e.g., &quot;Warning! This is very dangerous.&quot;) 와 같이 문장의 일부분에 중요도를 추가하고 싶을 때 사용됩니다.
+			<code>&lt;strong&gt;</code>과 Emphasis 는 각각 중첩해서 사용함으로써 중요성이나 강조의 상대적인 정도를 증가시킬 수 있습니다.
 		</p>
 	</section>
 
 	<section class="txt_ex mt_l">
-		<h2><code>&lt;strong&gt;</code> vs. <code>&lt;b&gt;</code></h2>
+		<h2><mark><code>&lt;strong&gt;</code></mark> vs. <mark><code>&lt;b&gt;</code></mark></h2>
 		<p class="indent">
 			<code>&lt;b&gt;</code> 요소는 콘텐츠의 중요성보다는 텍스트 자체에 주의를 끌기 위해 사용되지만,
 			<code>&lt;strong&gt;</code> 요소는 콘텐츠 자체의 중요성을 강조할 때 사용됩니다.
